--- a/index.html
+++ b/index.html
@@ -13,10 +13,81 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
-  <!-- Stylesheets -->
+  <link rel="stylesheet" href="CSS/main.css">
+  <link rel="stylesheet" href="CSS/float-grid.css">
 
+
+  <!-- Stylesheets -->
 </head>
 <body>
 
+	
+
+	<h1 class="head1">
+		<p class="large-font row">Star Wars Characters</p>
+		<p class="medium-font row">Incomplete List</p>
+	</h1>
+	
+	<div class="row">
+		<div class="col">
+			<div class="box">
+				<img src="images/rey_square.png" alt="">
+				<p class="box-font">Ray</p>
+				<p class="small-font">Protaganist from Tatooine</p>
+			</div>
+		</div>
+
+	<div class="row">
+		<div class="col">
+			<div class="box">
+				<img src="images/finn_square.png" alt="Kylo">
+				<p class="box-font">Finn</p>
+				<p class="small-font">Stormtrooper, befriends Ray</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col">
+			<div class="box">
+				<img src="images/kylo_square.png" alt="">
+				<p class="box-font">Kylo</p>
+				<p class="small-font">Main villain, or is he?</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col">
+			<div class="box">
+				<img src="images/poe_square.png" alt="">
+				<p class="box-font">Poe</p>
+				<p class="small-font">Nuetral pilot</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col">
+			<div class="box">
+				<img src="images/chewbacca_square.png" alt="">
+				<p class="box-font">Chewbacca</p>
+				<p class="small-font">A great first mate</p>
+			</div>
+		</div>
+	</div>
+	
+		<div class="row">
+		<div class="col">
+			<div class="box">
+				<img src="images/yoda_square.png" alt="">
+				<p class="box-font">Yoda</p>
+				<p class="small-font">Wise old Jedi master</p>
+			</div>
+		</div>
+	</div>
+
+		
+	
 </body>
 </html>
